syntax = "proto3";

package kotlinx.rpc.grpc.test;

//import 'reference_package.proto';

message Repeated {
  repeated fixed32 listFixed32 = 1 [packed = true];
  repeated int32 listInt32 = 2 [packed = false];
  repeated string listString = 3;
}
